@@ -1,5 +1,10 @@
 2004-09-30  Ulrich Drepper  <drepper@redhat.com>
 
+	* posix/Makefile: Add rules to build and run bug-glob1.
+	* posix/bug-glob1.c: New file.
+
+	* iconv/iconv_prog.c (main): Print progress information to stderr.
+
 	* nscd/nscd.c (termination_handler): Reset timestamp so that
 	clients immediately stop using the database.
 
